--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -36,9 +36,9 @@
           Você tem 2 horas livres no seu dia
         </span>
         <a href="/profile" id="avatar-profile">
-          <p>Jakeliny <span>Ver perfil</span></p>
+          <p>Joel</p> <span>Ver perfil</span></p>
           <img
-            src="https://avatars.githubusercontent.com/u/17316392?s=460&u=6912a91a70bc89745a2079fdcdad3bc3ce370f13&v=4" />
+            src="https://github.com/joelCatarino.png" />
         </a>
       </section>
 
@@ -73,56 +73,37 @@
 
   <div class="container">
     <main class="animate-up delay-2">
-      <h1 class="sr-only">Trabalhos</h1>
-
+      <h1 class="sr-only">Works</h1>
       <div class="cards">
-        <div class="card progress" data-id="1">
-          <div class="id column">1</div>
-          <div class="name column">
-            Pizzaria Guloso
-          </div>
-          <div class="deadline column">
-            <span>Prazo</span>
-            <p>3 dias para a entrega</p>
-          </div>
-          <div class="amount column">
-            <span>Valor</span>
-            <p>R$ 4500,00</p>
-          </div>
-          <div class="status badge column">
-            Em andamento
-          </div>
-          <div class="actions column flex">
-            <p class="sr-only">Ações</p>
-            <a href="/job-edit" class="button white edit" title="Editar Job">
-              <img src="./images/edit-24.svg" alt="Editar Job" />
-            </a>
-            <button class="delete button white" title="Excluir Job">
-              <img src="./images/trash-24.svg" alt="Excluir Job" />
-            </button>
-          </div>
-        </div>
-        <!-- end card -->
 
-        <div class="card done" data-id="2">
-          <div class="id column">2</div>
+      <% jobs.forEach((job) => { %> 
+        <div class="card <%= job.status %>" data-id="<%= job.id %>">
+          <div class="id column"><%= job.id %></div>
           <div class="name column">
-            OneTwo Project
+            <%= job.name %>  
           </div>
           <div class="deadline column">
-            <span>Prazo</span>
-            <p>3 dias para a entrega</p>
+            <span>Deadline</span>
+            <p>
+            <% if(job.status === 'progress') { %>   
+
+            <%= job.remaining %> days to delivery 
+
+            <% } else { %>
+            deadline closed
+            <% } %> 
+          </p>
           </div>
           <div class="amount column">
-            <span>Valor</span>
-            <p>R$ 4500,00</p>
+            <span>Value</span>
+            <p>R$ <%= job.budget.toFixed(2).replace('.', ',') %> </p>
           </div>
           <div class="status badge column">
-            Encerrado
+            <%= job.status === 'done' ? 'Done' : 'In Progress' %> 
           </div>
           <div class="actions column flex">
-            <p class="sr-only">Ações</p>
-            <a href="/job-edit" class="button white edit" title="Editar Job">
+            <p class="sr-only">Actions</p>
+            <a href="/job/<%= job.id %> " class="button white edit" title="Editar Job">
               <img src="./images/edit-24.svg" alt="Editar Job" />
             </a>
             <button class="delete button white" title="Excluir Job">
@@ -130,8 +111,7 @@
             </button>
           </div>
         </div>
-      </div>
-      <!-- end cards -->
+      <% }) %> 
     </main>
   </div>
   <!-- end container -->
