--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -30,17 +30,17 @@
 
     <div class="container animate-up delay-2">
       <aside class="card">
-        <img src="<%= profile.avatar %> " alt="<%= profile.name %> ">
+        <img src="<%= profile.avatar %>" alt="<%= profile.name %> ">
         <h2><%= profile.name  %> </h2>
         <p>
-          O valor da sua hora é <br />
-          <strong>R$ 25,00</strong>
+          Your hourly value is <br/>
+          <strong>R$ <%= profile["value-hour"].toFixed(2).replace(".", ",") %></strong>
         </p>
-        <button class="button green" form="form-profile" type="submit">Salvar dados</button>
+        <button class="button green" form="form-profile" type="submit">Save data</button>
       </aside>
       <main>
 
-        <form id="form-profile">
+        <form id="form-profile" method="post" action="/profile">
           <fieldset>
             <legend>Dados do perfil</legend>
             <div class="separator light"></div>
@@ -59,33 +59,33 @@
           </fieldset>
 
           <fieldset>
-            <legend>Planejamento</legend>
+            <legend>Planning</legend>
             <div class="separator light"> </div>
 
             <div class="input-group">
               <div class="input-wrapper">
-                <label for="monthly-budget">Quanto eu <br />quero ganhar por mês?</label>
+                <label for="monthly-budget">How much<br />I want to earn per month</label>
                 <input type="amount" step="0.1" id="monthly-budget" name="monthly-budget" value="<%= profile["monthly-budget"] %>" placeholder="R$" />
               </div>
 
               <div class="input-wrapper">
-                <label for="hours-per-day">Quantas horas <br />
-                  quero trabalhar por dia?</label>
+                <label for="hours-per-day">How many hours<br />
+                 I want to work per day?</label>
                 <input type="number" id="hours-per-day" name="hours-per-day" value="<%= profile["hours-per-day"] %>" />
               </div>
             </div>
 
             <div class="input-group">
               <div class="input-wrapper">
-                <label for="days-per-week">Quantos dias <br />quero
-                  trabalhar por semana?</label>
-                <input type="number" id="days-per-week" name="days-per-week" value="<%= profile["days-per-week"] %> "
-                />
+                <label for="days-per-week">How many days<br />
+                  I want to work per week?</label>
+                <input type="number" id="days-per-week" name="days-per-week" value="<%= profile["days-per-week"] %>" />
               </div>
+            
 
               <div class="input-wrapper">
-                <label for="vacation-per-year">Quantas semanas <br />
-                  por ano você quer tirar férias?</label>
+                <label for="vacation-per-year">How many weeks <br />
+                 per year you want to vacation?</label>
                 <input type="number" id="vacation-per-year" name="vacation-per-year" value="<%= profile["vacation-per-year"] %>" />
               </div>
             </div>
