--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -33,12 +33,16 @@
         <img id="logo" src="./images/logo.svg" alt="Logo" />
         <span id="notification">
           <img src="./images/alert-octagon.svg" alt="Alerta" />
-          Você tem 2 horas livres no seu dia
-        </span>
+          <% if (freeHours <= 0) {%> 
+            You don't have free hours. 
+          <% } else {%>
+            You have <%= freeHours %>  free hours day
+          <% } %> 
+          </span>
         <a href="/profile" id="avatar-profile">
-          <p>Joel</p> <span>Ver perfil</span></p>
+          <p><%= profile.name %></p> </p> <span>Profile</span></p>
           <img
-            src="https://github.com/joelCatarino.png" />
+            src="<%= profile.avatar %> " />
         </a>
       </section>
 
@@ -49,23 +53,23 @@
 
         <div class="info">
           <div class="total">
-            <strong>12</strong>
-            Projetos ao total
+            <strong><%= statusCount.total %> </strong>
+            total projects
           </div>
           <div class="in-progress">
-            <strong>7</strong>
-            Em andamento
+            <strong><%= statusCount.progress %> </strong>
+            progress
           </div>
           <div class="finished">
-            <strong>4</strong>
-            Encerrados
+            <strong><%= statusCount.done %> </strong>
+            dene
           </div>
         </div>
         <a class="button orange" href="/job">
           <span>
             <img src="/images/plus-24.svg" alt="Novo Job" />
           </span>
-          Adicionar novo job
+          Add job
         </a>
       </section>
     </div>
@@ -119,13 +123,13 @@
   <div class="modal-wrapper">
     <div class="modal">
       <img src="./images/trash-48.svg" alt="Excluir Job" title="Excluir Job" />
-      <h3>Excluir Job</h3>
+      <h3>Delete Job</h3>
       <p>Quer mesmo excluir esse job? <br />
         Ele será apagado para sempre.
       <p>
       <footer>
-        <a class="button gray" href="#">Cancelar</a>
-        <button class="button red" type="submit" form="delete-job">Excluir Job</button>
+        <a class="button gray" href="#">Cancel</a>
+        <button class="button red" type="submit" form="delete-job">Delete Job</button>
       </footer>
     </div>
     <form method="post" action="/job/delete" id="delete-job"></form>
