--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -54,15 +54,15 @@
         <div class="info">
           <div class="total">
             <strong><%= statusCount.total %> </strong>
-            total projects
+            Total Projects
           </div>
           <div class="in-progress">
             <strong><%= statusCount.progress %> </strong>
-            progress
+            Progress
           </div>
           <div class="finished">
             <strong><%= statusCount.done %> </strong>
-            dene
+            done
           </div>
         </div>
         <a class="button orange" href="/job">
@@ -107,10 +107,10 @@
           </div>
           <div class="actions column flex">
             <p class="sr-only">Actions</p>
-            <a href="/job/<%= job.id %> " class="button white edit" title="Editar Job">
+            <a href="/job/<%= job.id %> " class="button alternativo edit" title="Editar Job">
               <img src="./images/edit-24.svg" alt="Editar Job" />
             </a>
-            <button class="delete button white" title="Excluir Job">
+            <button class="delete button red" title="Excluir Job">
               <img src="./images/trash-24.svg" alt="Excluir Job" />
             </button>
           </div>
