--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -42,17 +42,17 @@
 
         <form id="form-profile" method="post" action="/profile">
           <fieldset>
-            <legend>Dados do perfil</legend>
+            <legend>Data Profile</legend>
             <div class="separator light"></div>
 
             <div class="input-group">
               <div class="input-wrapper">
-                <label for="name">Nome</label>
+                <label for="name">Name</label>
                 <input type="text" id="name" name="name" value="<%= profile.name %> " />
               </div>
 
               <div class="input-wrapper">
-                <label for="avatar">Link da foto</label>
+                <label for="avatar">Picture</label>
                 <input placeholder="https://" type="url" id="avatar" name="avatar" value="<%= profile.avatar %> " />
               </div>
             </div>
