--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -7,10 +7,10 @@
 
 /* custom vars */
 :root {
-  --color-background: #F0F2F5;
+  --color-background: #f6f4d2;
   --color-text: #FCFDFF;
 
-  --color-primary: #41414C;
+  --color-primary: #5f0f40;
   --color-secondary: #F1972C;
   --color-secondary-hover: #FA9C2D;
   
@@ -55,7 +55,6 @@
     font-size: 75%; /* 12px */
   }
 }
-
 @media(max-width: 590px) {
   :root {
     font-size: 62.25%; /* 10px */
