--- a/src/views/job-edit.ejs
+++ b/src/views/job-edit.ejs
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#41414C" />
-  <link rel="shortcut icon" href="images/favicon.png" type="image/png" />
+  <link rel="shortcut icon" href="../../public/images/favicon.png" type="image/x-icon"> 
   <title>JobsCalc</title>
 
   <link rel="stylesheet" href="/styles/main.css" />
@@ -24,7 +24,6 @@
     rel="stylesheet" />
 
   <script type="module" src="./scripts/job-edit.js"></script>
-
 </head>
 
 <body id="page-job-edit">
@@ -34,24 +33,24 @@
     <div class="container flex animate-up delay-2">
       <form id="form-job" method="post" action="/job/<%= job.id %> ">
         <fieldset>
-          <legend>Dados do Job</legend>
+          <legend>Job Data</legend>
           <div class="separator light"></div>
 
           <div class="input-wrapper">
-            <label for="name">Nome do Job</label>
+            <label for="name">Job name</label>
             <input type="text" id="name" name="name" value="<%= job.name %>" />
           </div>
 
           <div class="input-group">
             <div class="input-wrapper">
-              <label for="daily-hours">Quantas horas <br />
-                por dia vai dedicar ao job?</label>
+              <label for="daily-hours">How many hours <br />
+                a day will you dedicate to the job?</label>
               <input type="number" step="0.1" id="daily-hours" name="daily-hours" value="<%= job["daily-hours"] %>" />
             </div>
 
             <div class="input-wrapper">
-              <label for="total-hours">Estimativa de <br />
-                horas para esse Job?</label>
+              <label for="total-hours">Estimated hours <br />
+                for this Job?</label>
               <input type="number" id="total-hours" name="total-hours" value="<% job["total-hours"] %>" />
             </div>
           </div>
@@ -60,15 +59,17 @@
       </form>
       </main>
       <aside class="card">
-        <img src="./images/money-color.svg" alt="">
+        <img src="../../public/images/money-color.svg" alt="">
         <p>
-          O valor do projeto ficou em <strong>R$ <%= job.budget.toFixed(2).replace(".", ",") %></strong>
+          The value of the project was <strong>R$ <%= job.budget.toFixed(2).replace(".", ",") %></strong>
         </p>
         <div class="button-group">
           <button class="button green" form="form-job" type="submit" title="Salvar Dados">Salvar</button>
-          <a href="#" class="button gray open-modal">
-            <img src="./images/trash-24.svg" alt="Cancelar cadastro" title="Cancelar cadastro">
-          </a>
+          <!-- <a href="/" class="button gray open-modal"> -->
+          <!-- <button class="button gray open-modal" form="form-job" alt="Cancelar cadastro" title="Cancelar cadastro">
+            <img src=".images/trash-24.svg" alt="" srcset="">
+          </button> -->
+          <!-- </a> -->
         </div>
       </aside>
 
@@ -77,7 +78,7 @@
 
     <div class="modal-wrapper">
       <div class="modal">
-        <img src="./images/trash-48.svg" alt="Excluir Job" title="Excluir Job" />
+        <img src="../../public/images/trash-24.svg" alt="Excluir Job" title="Excluir Job" />
         <h3>Excluir Job</h3>
         <p>Quer mesmo excluir esse job? <br />
           Ele será apagado para sempre.
